force-app/main/default/objects/Member__c/fields/SAM_First_Auction_Date__c.field-meta.xml
<CustomField>
    <fullName>SAM_First_Auction_Date__c</fullName>
    <formula>IF(
  BLANKVALUE(First_Auction_Date_in_Yard_Storage__c, DATE(3999, 12, 31)) &lt;=
  BLANKVALUE(First_Auction_Date_in_User_Storage__c, DATE(3999, 12, 31)),
  
  IF(
    BLANKVALUE(First_Auction_Date_in_Yard_Storage__c, DATE(3999, 12, 31)) &lt;=
    BLANKVALUE(First_Auction_Date_in_oneprice__c, DATE(3999, 12, 31)),
    First_Auction_Date_in_Yard_Storage__c,
    First_Auction_Date_in_oneprice__c
  ),
  
  IF(
    BLANKVALUE(First_Auction_Date_in_User_Storage__c, DATE(3999, 12, 31)) &lt;=
    BLANKVALUE(First_Auction_Date_in_oneprice__c, DATE(3999, 12, 31)),
    First_Auction_Date_in_User_Storage__c,
    First_Auction_Date_in_oneprice__c
  )
)</formula>
    <label>SAM初回落札日</label>
    <type>Date</type>
</CustomField>