force-app/main/default/objects/Member__c/fields/SAM_First_bit_Date__c.field-meta.xml
<CustomField>
    <fullName>SAM_First_bit_Date__c</fullName>
    <description>DIさん側で設定し、連携していただいている項目。更新間隔は15分に1回</description>
    <label>SAM初回入札日時</label>
    <type>DateTime</type>
</CustomField>