force-app/main/default/objects/Member__c/fields/SAM_First_login_Date__c.field-meta.xml
<CustomField>
    <fullName>SAM_First_login_Date__c</fullName>
    <description>Diさんからデータ連携分</description>
    <label>SAM初回ログイン日時</label>
    <type>DateTime</type>
</CustomField>