force-app/main/default/objects/Member__c/fields/SNS_URL__c.field-meta.xml
<CustomField>
    <fullName>SNS_URL__c</fullName>
    <label>SNSアカウントURL</label>
    <type>Url</type>
</CustomField>