force-app/main/default/objects/Member__c/fields/split_charge__c.field-meta.xml
<CustomField>
    <fullName>split_charge__c</fullName>
    <label>分割手数料</label>
    <length>255</length>
    <type>Text</type>
</CustomField>