force-app/main/default/objects/Member__c/fields/Structure_of_a_family1__c.field-meta.xml
<CustomField>
    <fullName>Structure_of_a_family1__c</fullName>
    <label>家族構成1</label>
    <length>260</length>
    <type>LongTextArea</type>
</CustomField>