force-app/main/default/objects/Member__c/fields/Structure_of_a_family2__c.field-meta.xml
<CustomField>
    <fullName>Structure_of_a_family2__c</fullName>
    <label>家族構成2</label>
    <length>260</length>
    <type>LongTextArea</type>
</CustomField>