force-app/main/default/objects/Member__c/fields/supplier__c.field-meta.xml
<CustomField>
    <fullName>supplier__c</fullName>
    <description>どういったサービスが提供できるかの判断材料として使用したい（松浦さん）</description>
    <label>【国内】仕入先</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自社</fullName>
            </value>
            <value>
                <fullName>一般企業</fullName>
            </value>
            <value>
                <fullName>親族</fullName>
            </value>
            <value>
                <fullName>パートナー企業</fullName>
            </value>
            <value>
                <fullName>友人</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>