force-app/main/default/objects/Member__c/fields/supplier_cd__c.field-meta.xml
<CustomField>
    <fullName>supplier_cd__c</fullName>
    <label>仕入先コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>