force-app/main/default/objects/Member__c/fields/supplier_country__c.field-meta.xml
<CustomField>
    <fullName>supplier_country__c</fullName>
    <inlineHelpText>選択肢にない場合は戦略課までお問い合わせ下さい。</inlineHelpText>
    <label>【海外】仕入先</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UAE</fullName>
            </value>
            <value>
                <fullName>韓国</fullName>
            </value>
            <value>
                <fullName>シンガポール</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>ドイツ</fullName>
            </value>
            <value>
                <fullName>中国</fullName>
            </value>
            <value>
                <fullName>アメリカ</fullName>
            </value>
            <value>
                <fullName>キプロス</fullName>
            </value>
            <value>
                <fullName>自国</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>