force-app/main/default/objects/Member__c/fields/Surrender_Original_Sea_waybill__c.field-meta.xml
<CustomField>
    <fullName>Surrender_Original_Sea_waybill__c</fullName>
    <label>Surrender/Original/Sea waybill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Surrender</fullName>
            </value>
            <value>
                <fullName>Original</fullName>
            </value>
            <value>
                <fullName>Sea waybill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>