force-app/main/default/objects/Member__c/fields/tel_no__c.field-meta.xml
<CustomField>
    <fullName>tel_no__c</fullName>
    <label>電話番号</label>
    <type>Phone</type>
</CustomField>