force-app/main/default/objects/Member__c/fields/tender_object_type__c.field-meta.xml
<CustomField>
    <fullName>tender_object_type__c</fullName>
    <label>代理出品入札対象</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>対象外</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>優良取引会員</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>全会員</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>