force-app/main/default/objects/Member__c/fields/test_account__c.field-meta.xml
<CustomField>
    <fullName>test_account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>テストアカウント</label>
    <type>Checkbox</type>
</CustomField>