force-app/main/default/objects/Member__c/fields/Today__c.field-meta.xml
<CustomField>
    <fullName>Today__c</fullName>
    <formula>Day(Today())=1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>月初チェック</label>
    <type>Checkbox</type>
</CustomField>