force-app/main/default/objects/Member__c/fields/tork_jkyo_kbn__c.field-meta.xml
<CustomField>
    <fullName>tork_jkyo_kbn__c</fullName>
    <label>登録状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>登録会員</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>削除会員</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>仮登録会員</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>差し戻し</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>削除申請中</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>