force-app/main/default/objects/Member__c/fields/transaction_priority__c.field-meta.xml
<CustomField>
    <fullName>transaction_priority__c</fullName>
    <description>高額車両を買う業者は台数が少ないが、無下にすることはできないため、手動が良いとのこと（松浦さん）</description>
    <label>取引優先度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>高</fullName>
            </value>
            <value>
                <fullName>中</fullName>
            </value>
            <value>
                <fullName>低</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>