force-app/main/default/objects/Member__c/fields/trhk_kbn__c.field-meta.xml
<CustomField>
    <fullName>trhk_kbn__c</fullName>
    <label>取引区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>国内取引</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>海外取引</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>