force-app/main/default/objects/Member__c/fields/trok_mt_kbn__c.field-meta.xml
<CustomField>
    <fullName>trok_mt_kbn__c</fullName>
    <label>登録元</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>はなまるオークション</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>リユースオークション</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>AS会員</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>代理出品専用会員</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>