force-app/main/default/objects/Member__c/fields/used__c.field-meta.xml
<CustomField>
    <fullName>used__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>中古車</label>
    <referenceTo>used_car__c</referenceTo>
    <relationshipName>member_used</relationshipName>
    <type>Lookup</type>
</CustomField>