force-app/main/default/objects/Member__c/fields/used_lang_kbn2__c.field-meta.xml
<CustomField>
    <fullName>used_lang_kbn2__c</fullName>
    <description>1:日本語 2:英語 3:ロシア語 4:スペイン語 5:中国語 6:広東語 7:ウルドゥー語 8:ポルトガル語</description>
    <label>使用言語2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>日本語</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>英語</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>ロシア語</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>スペイン語</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>中国語</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>広東語</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>ウルドゥー語</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>ポルトガル語</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>