force-app/main/default/objects/Member__c/fields/User_Storage_Pickup__c.field-meta.xml
<CustomField>
    <fullName>User_Storage_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ユーザー保管引取</label>
    <type>Checkbox</type>
</CustomField>