force-app/main/default/objects/Member__c/fields/User_Storage_Total_Purchase_Units__c.field-meta.xml
<CustomField>
    <fullName>User_Storage_Total_Purchase_Units__c</fullName>
    <label>ユーザー保管 累計購入台数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>