force-app/main/default/objects/Member__c/fields/visitor_client_base_id__c.field-meta.xml
<CustomField>
    <fullName>visitor_client_base_id__c</fullName>
    <label>ビジター顧客ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>