force-app/main/default/objects/Member__c/fields/visitor_del_flg__c.field-meta.xml
<CustomField>
    <fullName>visitor_del_flg__c</fullName>
    <label>ビジター削除フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>