force-app/main/default/objects/Member__c/fields/visitor_last_login_date__c.field-meta.xml
<CustomField>
    <fullName>visitor_last_login_date__c</fullName>
    <label>ビジター最終ログイン日時</label>
    <type>DateTime</type>
</CustomField>