force-app/main/default/objects/Member__c/fields/visitor_login_kbn__c.field-meta.xml
<CustomField>
    <fullName>visitor_login_kbn__c</fullName>
    <label>ビジターログイン</label>
    <length>255</length>
    <type>Text</type>
</CustomField>