force-app/main/default/objects/Member__c/fields/visitor_member_id__c.field-meta.xml
<CustomField>
    <fullName>visitor_member_id__c</fullName>
    <label>ビジター会員ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>