force-app/main/default/objects/Member__c/fields/Yaer_of_Japan1__c.field-meta.xml
<CustomField>
    <fullName>Yaer_of_Japan1__c</fullName>
    <label>来日年（西暦）1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Model_Year</valueSetName>
    </valueSet>
</CustomField>