force-app/main/default/objects/Member__c/fields/Yaer_of_Japan__c.field-meta.xml
<CustomField>
    <fullName>Yaer_of_Japan__c</fullName>
    <label>来日年（西暦）2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>