force-app/main/default/objects/Member__c/fields/yard_cd__c.field-meta.xml
<CustomField>
    <fullName>yard_cd__c</fullName>
    <label>お気に入りヤードコード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>