force-app/main/default/objects/Member__c/fields/yard_no__c.field-meta.xml
<CustomField>
    <fullName>yard_no__c</fullName>
    <label>お気に入りヤードNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>