force-app/main/default/objects/Member__c/fields/year_of_establishment__c.field-meta.xml
<CustomField>
    <fullName>year_of_establishment__c</fullName>
    <label>会社設立年（西暦）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Model_Year</valueSetName>
    </valueSet>
</CustomField>