force-app/main/default/objects/Member__c/fields/zjyu_kbn__c.field-meta.xml
<CustomField>
    <fullName>zjyu_kbn__c</fullName>
    <label>在住地区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>日本在住</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>海外在住</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>