force-app/main/default/objects/Member__c/fields/zksi_kbn__c.field-meta.xml
<CustomField>
    <fullName>zksi_kbn__c</fullName>
    <label>属性</label>
    <length>255</length>
    <type>Text</type>
</CustomField>