force-app/main/default/objects/Member__c/validationRules/MemberName_is_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>MemberName_is_changed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Name ) &amp;&amp; NOT( $User.Username = &quot;salesforce@hanamaru870.co.jp&quot; )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>会員名は変更できません。</errorMessage>
</ValidationRule>