force-app/main/default/objects/Member__c/listViews/Management_Domestic_Member.listView-meta.xml
<ListView>
    <fullName>Management_Domestic_Member</fullName>
    <filterScope>Queue</filterScope>
    <label>管理者確認（国内）</label>
    <queue>Management_Domestic</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>