force-app/main/default/objects/Member__c/listViews/Management_overseas_Member.listView-meta.xml
<ListView>
    <fullName>Management_overseas_Member</fullName>
    <filterScope>Queue</filterScope>
    <label>管理者確認（海外）</label>
    <queue>Management_overseas</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>